--- a/React/tmdb_clone/src/components/header/Header.css
+++ b/React/tmdb_clone/src/components/header/Header.css
@@ -87,7 +87,7 @@
     position: relative;
     cursor: pointer;
   }
-  .sidebar {
+  .navbar .sidebar {
     position: fixed;
     top: 63px;
     right: 0;
@@ -101,10 +101,10 @@
     padding-right: 40px;
     color: white;
   }
-  .sidebar .sidebar_links {
+  .navbar .sidebar .sidebar_links {
     list-style: none;
   }
-  .sidebar .sidebar_links .sidebar_link {
+  .navbar .sidebar .sidebar_links .sidebar_link {
     padding: 8px 0px;
   }
 }
@@ -115,7 +115,7 @@
   .navbar .navbar__toggle {
     padding-right: 20px;
   }
-  .sidebar {
+  .navbar .sidebar {
     padding-right: 20px;
   }
 }/*# sourceMappingURL=header.css.map */
