--- a/React/tmdb_clone/src/components/movieCard/movieCard.scss
+++ b/React/tmdb_clone/src/components/movieCard/movieCard.scss
@@ -113,30 +113,33 @@
 }
 
 @media screen and (max-width: 749px) {
-  .movie_card.full {
-    display: flex;
-    width: 100%;
-    height: 150px;
-    margin-bottom: 0px;
+  .movie_card {
+    &.full {
+      display: flex;
+      width: 100%;
+      height: 150px;
+      margin-bottom: 0px;
 
-    .circular_progressbar.default {
-      display: none;
+      .circular_progressbar.default {
+        display: none;
+      }
     }
-  }
-  .movie_card .movie_card_content .detail {
-    display: block;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    line-height: 21px;
-    max-height: 48px;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-  }
 
-  .movie_card .movie_card_image .poster.full {
-    min-width: 94px;
-    max-width: 94px;
-    min-height: 141px;
+    .movie_card_content .detail {
+      display: block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      line-height: 21px;
+      max-height: 48px;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+    }
+
+    .movie_card_image .poster.full {
+      min-width: 94px;
+      max-width: 94px;
+      min-height: 141px;
+    }
   }
 }
