--- a/React/tmdb_clone/src/components/watchProvider/watchProvider.scss
+++ b/React/tmdb_clone/src/components/watchProvider/watchProvider.scss
@@ -1,8 +1,9 @@
 .ott_wrapper {
   margin-top: 14px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 6px;
+  row-gap: 10px;
   .ott_item {
     list-style: none;
     position: relative;
@@ -14,7 +15,8 @@
       border-radius: 8px;
     }
 
-    &:hover, &.selected {
+    &:hover,
+    &.selected {
       .tooltip_img_wrapper {
         display: flex;
         align-items: center;
@@ -35,9 +37,5 @@
         }
       }
     }
-
-    // &.selected {
-
-    // }
   }
 }
