--- a/React/tmdb_clone/src/pages/detailedContent/components/trailerModel/trailerModel.css
+++ b/React/tmdb_clone/src/pages/detailedContent/components/trailerModel/trailerModel.css
@@ -11,6 +11,7 @@
   align-items: center;
   background: rgb(77, 77, 77);
   color: white;
+  border-bottom: 1px solid gray;
   padding: 10px;
 }
 .trailer_model .trailer_model_action .img_wrapper {
@@ -33,6 +34,17 @@
   height: calc(100% - 53px);
   border: none;
 }
+.trailer_model .trailer_not_found {
+  background: rgb(77, 77, 77);
+  height: calc(100% - 53px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10px;
+}
+.trailer_model .trailer_not_found h1 {
+  color: white;
+}
 
 .popperTrailer {
   width: 100%;
@@ -44,4 +56,15 @@
   display: flex !important;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (max-width: 750px) {
+  .trailer_model .trailer_not_found h1 {
+    font-size: 24px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .trailer_model .trailer_not_found h1 {
+    font-size: 20px;
+  }
 }/*# sourceMappingURL=trailerModel.css.map */
