--- a/React/tmdb_clone/src/components/watchProvider/watchProvider.scss
+++ b/React/tmdb_clone/src/components/watchProvider/watchProvider.scss
@@ -2,6 +2,7 @@
   margin-top: 14px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   column-gap: 6px;
   row-gap: 10px;
   .ott_item {
