--- a/React/tmdb_clone/src/components/watchProvider/watchProvider.css
+++ b/React/tmdb_clone/src/components/watchProvider/watchProvider.css
@@ -2,6 +2,7 @@
   margin-top: 14px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   -moz-column-gap: 6px;
        column-gap: 6px;
   row-gap: 10px;
