--- a/React/tmdb_clone/src/pages/detailedContent/components/trailerModel/trailerModel.scss
+++ b/React/tmdb_clone/src/pages/detailedContent/components/trailerModel/trailerModel.scss
@@ -62,6 +62,7 @@
   display: flex !important;
   justify-content: center;
   align-items: center;
+  z-index: 10;
 }
 
 @media screen and (max-width: 750px) {
